wrap all :hover styles in media query to avoid stuck hover styles on touch devices

--- a/src/app/TopBar.module.css
+++ b/src/app/TopBar.module.css
@@ -128,8 +128,10 @@
   button {
     color: var(--text-secondary);
   }
-  button:hover {
-    color: var(--text-secondary-hover);
+  @media (hover: hover) and (pointer: fine) {
+    button:hover {
+      color: var(--text-secondary-hover);
+    }
   }
 }
 
